--- a/views/coffee/favourites.ejs
+++ b/views/coffee/favourites.ejs
@@ -1,11 +1,15 @@
 <%- include('../partials/header') %>
 <div class="favourites-page-wrapper">
-  <h1 class="favourites-heading">Your Favourites:</h1>
+
+       <h1 class="favourites-heading">Your Favourites:</h1>
+
   <% if (locals.coffees) { %>
     <% if(!coffees.length) { %>
-      <p>You don't have any favourites.</p>
+      <p class="error-txt">You don't have any favourites.</p>
     <%} %>
     <% coffees.forEach((coffee) => { %>
+
+      <% let displayDate = new Date(coffee.roastDate).toLocaleDateString().slice(0, 10); %>
 
       <hr class="coffee-card-hr">
       <div class="coffee-card">
@@ -14,7 +18,7 @@
 
         <div class="coffee-card-heading-wrapper">
           <a class="coffee-link" href="/coffee/<%= coffee._id %>"><h1 class="coffee-card-name-heading"><%= coffee.name %></h1></a>
-          <h2 class="coffee-subheading"><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2>
+          <h2 class="coffee-subheading"><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= displayDate %></h2>
           <h4 class="coffee-card-user">Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
         </div>
 
@@ -31,7 +35,7 @@
           </div>
         </div>
 
-        <div class="coffee-card-image-wrapper"><img class="coffee-card-img" src="<%= coffee.imageUrl %>" alt="coffee image"></div>
+        <div class="coffee-card-image-wrapper"><img class="coffee-card-img" src="<%= coffee.imageUrl %>" onerror="this.onerror=null; this.src='/images/broken-link-svgrepo-com.svg'" alt="coffee image"></div>
       
         <div class="delete-favourite-form-wrapper">
           <form class="delete-favourite-form" action="/coffee/favourites/<%= coffee._id %>?_method=DELETE" method="POST">
