update error msg class on favourites page when empty

--- a/views/coffee/favourites.ejs
+++ b/views/coffee/favourites.ejs
@@ -46,7 +46,7 @@
 
     <% }) %>
   <% } else {%>
-    <p><%=errorMsg%></p>
+    <p class="error-txt"><%=errorMsg%></p>
     <%}%>
 </div>
 <%- include('../partials/footer') %>
