--- a/views/coffee/new.ejs
+++ b/views/coffee/new.ejs
@@ -63,6 +63,7 @@
           <div class="new-coffee-file-input-wrapper">
             <label class="new-coffee-label">Image Url:
               <input class="new-coffee-file-input" type="text" name="imageUrl" id="imageUpload"></label>
+              <p class="error-txt">*Must begin with http://</p>
           </div>
         <br>
         <button class="landing-btns" type="submit">Publish</button>
