Finish preliminary styles for full responsive desktop

--- a/views/coffee/new.ejs
+++ b/views/coffee/new.ejs
@@ -61,8 +61,8 @@
             <textarea class="new-coffee-text-area" name="initReview" cols="80" rows="10"></textarea>
         </div>
           <div class="new-coffee-file-input-wrapper">
-            <label class="new-coffee-label">Image Url:
-              <input class="new-coffee-file-input" type="text" name="imageUrl" id="imageUpload"></label>
+            <label class="new-coffee-label">Image Url:</label>
+              <input class="new-coffee-file-input" type="text" name="imageUrl" id="imageUpload">
               <p class="error-txt">*Must begin with http://</p>
           </div>
         <br>
