--- a/views/coffee/show.ejs
+++ b/views/coffee/show.ejs
@@ -117,8 +117,6 @@
               </div>
 
         </div>
-
-     
       <!-- wrapper for inputs -->
 
           <hr class="coffee-card-hr">
@@ -131,6 +129,7 @@
           <div class="new-coffee-file-input-wrapper">
             <label class="new-coffee-label" for="imageUrl">Image Url: </label>
              <input class="new-coffee-file-input" value="<%=coffee.imageUrl%>" type="text" name="imageUrl" id="imageUpload">
+             <p class="error-txt">*Must begin with http://</p>
           </div>
 
           <br>
