--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -388,78 +388,54 @@ margin-top: 0;
   min-width:30%;
 }
 
-.review-button-row{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  align-self: flex-end;
-}
-
 .review-card{
-  margin: 30px 0 30px 0;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  gap: 20px;
+  gap: 10px;
   margin: 30px 0 30px 0;
   padding: 0 50px 0 50px;
 }
 
-.edit-review-form-flex-container{
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.review-card-left-column{
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: flex-start;
-}
-
-.review-card-middle-column{
-  align-self: flex-start;
-  width: 100%;
+.review-card-left-column, .review-card-middle-column{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
 }
 
 .review-btn{
   display: flex;
-  align-self: flex-start;
   font-size: 0.8rem;
   height: 30px;
   width: 160px;
   border: none;
   border-radius: 4px;
-  margin: 10px 10px 0 0;
 }
 
-.edit-review-left-column{
+.review-button-row{
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-  height: 100%;
-}
-
-.edit-review-middle-column{
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .coffee-card-hr{
-  height: 3px;
+  height: 1px;
   width: 100%;
   border: none;
-  border-bottom: solid 2px var(--main-white);
+  /* border-bottom: solid 2px var(--main-white); */
+  background: rgb(255,255,255);
+  background: -moz-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(243,243,244,1) 1%, rgba(243,243,244,1) 99%, rgba(255,255,255,0) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(243,243,244,1) 1%, rgba(243,243,244,1) 99%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(243,243,244,1) 1%, rgba(243,243,244,1) 99%, rgba(255,255,255,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
   margin: 0 auto;
-  opacity: 80%;
+  opacity: 20%;
 }
 
 
@@ -496,9 +472,9 @@ margin-top: 0;
   align-items:center;
 }
 
-.new-coffee-ratings-wrapper{
+.new-coffee-ratings-wrapper, .edit-coffee-ratings-wrapper{
   display: flex;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
   width: 50%;
   justify-content: space-between;
   align-items:center;
@@ -507,14 +483,6 @@ margin-top: 0;
 
 .review-content{
   font-size: 1.8rem;
-}
-
-.edit-review-txt-area{
-  font-family: 'Lato', arial, sans-serif;
-  font-size: 1.7rem;
-  border-radius: 3px;
-  height: 250px;
-  width: 500px;
 }
 
 .review-card-user-img{
@@ -585,10 +553,10 @@ margin-top: 0;
 }
 
 .new-coffee-file-input-wrapper{
-  margin: 30px auto 20px auto;
+  margin: 30px auto 0 auto;
   display: flex;
+  gap: 20px;
   flex-direction: column;
-  justify-content: space-between;
   align-items:center;
 }
 
@@ -674,12 +642,52 @@ margin-top: 0;
   padding: 0 50px 0 50px;
 }
 
+.edit-review-form-flex-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.edit-review-left-column{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.edit-review-user-img{
+  border-radius: 50%;
+  height: 80px;
+}
+
+.edit-review-middle-column{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.edit-review-txt-area{
+  font-family: 'Lato', arial, sans-serif;
+  font-size: 1.7rem;
+  border-radius: 3px;
+  height: 250px;
+  width: 500px;
+}
+
 .edit-review-button-row{
   display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: flex-start;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 10px;
 }
 
 .cancel-edit-btn{
@@ -704,6 +712,7 @@ margin-top: 0;
   border-radius: 5px;
   font-size: 1.5rem;
   font-family:'Lato', arial, sans-serif;
+  width: 80%;
 }
 
 @media (max-width:1800px){
@@ -713,6 +722,10 @@ margin-top: 0;
 }
 
 @media(max-width:1719px){
+
+  .edit-coffee-ratings-wrapper{
+    flex-direction: column;
+  }
 
   .show-coffee-button-row{
     align-self: flex-start;
@@ -759,10 +772,6 @@ margin-top: 0;
   .new-coffee-ratings-wrapper{
     align-items: flex-start;
     width: 95%;
-}
-
-.new-review-text-area{
-  width: 50%;
 }
 
 .edit-review-txt-area{
@@ -848,9 +857,6 @@ margin-top: 0;
       justify-content: space-between;
       align-items:center;
     }
-    .new-review-text-area{
-      width: 80%;
-    }
   }
 
   @media (max-width: 770px){
@@ -871,6 +877,13 @@ margin-top: 0;
     }
     .nav-brand{
       height: 45px;
+    }
+
+    .reviews-wrapper{
+      padding: 0 20px 0 20px;
+    }
+    .new-review-text-area{
+      width: 90%;
     }
   }
   
@@ -943,10 +956,6 @@ margin-top: 0;
       justify-content: center;
     }
   
-    .review-btn{
-       align-self: center;
-    }
-  
     .delete-favourite-form-wrapper{
       margin: 0 auto;
     }
@@ -984,7 +993,7 @@ margin-top: 0;
       margin: 0 auto;
       justify-content: center;
       align-items: center;
-      max-width:none;
+      max-width:80%;
     }
     .coffee-card-heading-wrapper{
       margin: 10px 0 10px 0;
