--- a/views/coffee/new.ejs
+++ b/views/coffee/new.ejs
@@ -10,7 +10,7 @@
          <div class="new-coffee-heading-wrapper">
            <label class="new-coffee-label" for="name">Name: </label><input class="new-coffee-input" type="text" name="name">
            <label class="new-coffee-label" for="roaster">Roaster: </label><input class="new-coffee-input" type="text" name="roaster">
-           <label class="new-coffee-label" for="roastDate">Roast Date: </label><input class="date-picker" type="datetime-local" value="<%= roastDate %>" name="roastDate" />
+           <label class="new-coffee-label" for="roastDate">Roast Date: </label><input class="date-picker" type="datetime-local" value="<%= roastDate.toLocaleString() %>" name="roastDate" />
          </div>
          <div class="new-coffee-ratings-wrapper">
            <label class="new-coffee-label" for="aroma">Aroma:
