update date logic

--- a/views/coffee/new.ejs
+++ b/views/coffee/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 <div class="new-coffee-page-wrapper">
 
-<%    const rD = new Date(); %>
+<% const rD = new Date(); %>
 
 <% let roastDate = `${rD.getFullYear()}-${(rD.getMonth() + 1).toString().padStart(2, '0')}`; %>
 <% roastDate += `-${rD.getDate().toString().padStart(2, '0')}T${rD.toTimeString().slice(0, 5)}`;%>
@@ -16,7 +16,7 @@
          <div class="new-coffee-heading-wrapper">
            <label class="new-coffee-label" for="name">Name: </label><input class="new-coffee-input" type="text" name="name">
            <label class="new-coffee-label" for="roaster">Roaster: </label><input class="new-coffee-input" type="text" name="roaster">
-           <label class="new-coffee-label" for="roastDate">Roast Date: </label><input class="date-picker" type="datetime-local" value="<%= roastDate.toLocaleString() %>" name="roastDate" />
+           <label class="new-coffee-label" for="roastDate">Roast Date: </label><input class="date-picker" type="datetime-local" value="<%= roastDate %>" name="roastDate" />
          </div>
          <div class="new-coffee-ratings-wrapper">
            <label class="new-coffee-label" for="aroma">Aroma:
