--- a/views/coffee/show.ejs
+++ b/views/coffee/show.ejs
@@ -2,7 +2,8 @@
 
 <% let displayDate = new Date(coffee.roastDate).toLocaleDateString().slice(0, 10); %>
 
-<%   const rD = coffee.roastDate; %>
+<%   const utcDateString = coffee.roastDate.toISOString(); %>
+<% let rD = new Date(utcDateString); %>
 <% let roastDate = `${rD.getFullYear()}-${(rD.getMonth() + 1).toString().padStart(2, '0')}`; %>
 <% roastDate += `-${rD.getDate().toString().padStart(2, '0')}T${rD.toTimeString().slice(0, 5)}`;%>
 
@@ -74,7 +75,7 @@
                  <label class="new-coffee-label" for="roaster">Roaster: </label>
                  <input class="new-coffee-input" type="text" value="<%=coffee.roaster%>" name="roaster">
                  <label class="new-coffee-label" for="roastDate">Roast Date: </label>
-                 <input class="date-picker" type="datetime-local" value="<%= roastDate.toLocaleString() %>" name="roastDate" />
+                 <input class="date-picker" type="datetime-local" value="<%= roastDate %>" name="roastDate" />
               </div>
 
               <div class="edit-coffee-ratings-wrapper">
